--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -2,11 +2,6 @@
 {% load static %}
 
 {% block content %}
-
-
-
-    <!--page title start-->
-
     <section class="page-title o-hidden pos-r md-text-center" data-bg-color="#fbf3ed">
         <canvas id="confetti"></canvas>
         <div class="container">
@@ -27,20 +22,8 @@
                 </div>
             </div>
         </div>
-        <div class="page-title-pattern">
-            <img class="img-fluid" src="/static/images/bg/11.png" alt="">
-        </div>
     </section>
-
-    <!--page title end-->
-
-
-    <!--body content start-->
-
     <div class="page-content">
-
-        <!--about start-->
-
         <section class="pos-r pt-0">
             <div class="hexagon-bg style-2">
                 <div class="hexagon"></div>
@@ -60,8 +43,7 @@
                                     <div class="bar bar-left"></div>
                                 </div>
                                 <h2 class="title">Our Story</h2>
-
-                                <iframe width="100%" height="315" src="{{ why_buy_video }}" frameborder="0"
+                                <iframe width="100%" height="315" src="{{ dynamic.why_buy_video }}" frameborder="0"
                                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
 
@@ -78,8 +60,7 @@
                             </div>
                             <h2 class="title">Who are we?</h2>
                                 <p>{{ dynamic.aboutus_text }}</p>
-                            <a href="/pricing" class="btn btn-theme btn-circle" target="_blank"
-                               style="margin-top: 10px;">Check Our Packages</a>
+                            <a href="/pricing" class="btn btn-theme btn-circle" target="_blank" style="margin-top: 10px;">Check Our Packages</a>
                         </div>
                     </div>
                 </div>
@@ -221,8 +202,6 @@
                                 <div class="col-md-12 mt-2">
                                     <a href="{% url "business:business-credit-steps-onlyprograms" %}"
                                        class="btn btn-theme btn-circle">${{ yearly }} Annual Payment Option</a><br><br>
-                                    {#                                <a href="/financing" class="btn btn-theme btn-circle">No Money Down Option Subject To#}
-                                    {#                                    Financing</a><br><br>#}
                                     <a href="{% url "business:business-credit-steps-onlyprograms" %}"
                                        class="btn btn-theme btn-circle">${{ monthly }} Monthly Payment Option</a><br>
                                 </div>
@@ -232,196 +211,7 @@
                 </div>
             </div>
         </section>
-
-        <!--about end-->
-
-
-        <!--feature start-->
-
-        <!-- <section class="pos-r bg-effect text-center">
-          <div class="container z-index-1">
-            <div class="row">
-              <div class="col-lg-4 col-md-6">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-software"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>Design</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 sm-mt-5">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-scroll"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>Drag And Drop</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 md-mt-5">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-resolution"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>High Resolution</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mt-5">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-objective"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>App integration</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mt-5">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-market"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>Marketing</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 mt-5">
-                <div class="featured-item style-1">
-                  <div class="featured-icon"> <i class="flaticon-customer-service"></i>
-                  </div>
-                  <div class="featured-title">
-                    <h5>Helping Support</h5>
-                  </div>
-                  <div class="featured-desc">
-                    <p>Top quality Software services, labore et dolore magna ali qua Lorem ipsum dolor sit amet.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
-
-        <!--feature end-->
-
-
-        <!--counter start-->
-
-        <!-- <section class="pb-0">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3 col-md-3 col-sm-6">
-                <div class="counter style-2">
-                  <div class="counter-desc"> <span class="count-number" data-to="2304" data-speed="10000">2304</span>
-                    <span>+</span>
-                    <h5>Project Done</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-6 xs-mt-5">
-                <div class="counter style-2">
-                  <div class="counter-desc"> <span class="count-number" data-to="3585" data-speed="10000">3585</span>
-                    <span>+</span>
-                    <h5>Success Rate</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-6 sm-mt-5">
-                <div class="counter style-2">
-                  <div class="counter-desc"> <span class="count-number" data-to="1365" data-speed="10000">1365</span>
-                    <span>+</span>
-                    <h5>Awards</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-6 sm-mt-5">
-                <div class="counter style-2">
-                  <div class="counter-desc"> <span class="count-number" data-to="4328" data-speed="10000">4328</span>
-                    <span>+</span>
-                    <h5>Happy Client</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
-
-        <!--counter end-->
-
-
-        <!--faq start-->
-
-        <!-- <section class="pos-r py-15 md-py-8">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-xl-6 col-lg-6 col-md-12 image-column p-0">
-                <div class="img-box box-shadow radius-1">
-                    <div class="box-loader">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </div>
-                    <img class="img-center" src="/static/images/banner/03.jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 col-md-12 ml-auto md-mt-5">
-                <div id="accordion" class="accordion style-1 ml-lg-2">
-                  <div class="card active">
-                    <div class="card-header">
-                      <h6 class="mb-0">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true">consectetur adipisicing elit, sed ?</a>
-                      </h6>
-                    </div>
-                    <div id="collapse1" class="collapse show" data-parent="#accordion">
-                      <div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <h6 class="mb-0">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">temporo incididunt ut labore et dolore ?</a>
-                      </h6>
-                    </div>
-                    <div id="collapse2" class="collapse" data-parent="#accordion">
-                      <div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <h6 class="mb-0">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">quis nostrd exercitation ullamco laboris ?</a>
-                      </h6>
-                    </div>
-                    <div id="collapse3" class="collapse" data-parent="#accordion">
-                      <div class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
-
-        <!--faq end-->
-
-
-        <!--pricing end-->
-
+  {% if False %}
         <section class="pos-r pt-0">
             <div class="hexagon-bg style-2">
                 <div class="hexagon"></div>
@@ -447,7 +237,6 @@
             </div>
         </section>
 
-        <!--testimonial start-->
 
         <section class="p-0 pos-r" data-bg-img="images/pattern/03.png">
             <div class="container">
@@ -763,90 +552,7 @@
                 </div>
             </div>
         </section>
-
-        <!-- <section class="pos-r o-hidden bg-effect right">
-          <canvas id="canvas"></canvas>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12 col-md-12">
-                <div id="testimonial-2" class="testimonial-carousel carousel slide testimonial-2" data-ride="carousel" data-interval="2500">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <div class="testimonial style-5">
-                        <div class="testimonial-img">
-                          <img class="img-center" src="/static/images/testimonial/01.jpg" alt="">
-                        </div>
-                        <div class="testimonial-content">
-                          <div class="testimonial-quote"><i class="la la-quote-left"></i>
-                          </div>
-                          <p>Professional recommended and great experience, Nam pulvinar vitae neque et porttitor, Praesent sed nisi eleifend, Consectetur adipisicing elit, sed do eiusmodas temporo incididunt Praesent sed nisi eleifend, Consectetur adipisicing elit</p>
-                          <div class="testimonial-caption">
-                            <h5>Lana Roadse</h5>
-                            <label>CEO of Softino</label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="testimonial style-5">
-                        <div class="testimonial-img">
-                          <img class="img-center" src="/static/images/testimonial/02.jpg" alt="">
-                        </div>
-                        <div class="testimonial-content">
-                          <div class="testimonial-quote"><i class="la la-quote-left"></i>
-                          </div>
-                          <p>Recommended Professional and great experience, Nam pulvinar vitae neque et porttitor, Praesent sed nisi eleifend, Consectetur adipisicing elit, sed do eiusmodas temporo incididunt Praesent sed nisi eleifend, Consectetur adipisicing elit,</p>
-                          <div class="testimonial-caption">
-                            <h5>Lana Roadse</h5>
-                            <label>CEO of Softino</label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="testimonial style-5">
-                        <div class="testimonial-img">
-                          <img class="img-center" src="/static/images/testimonial/03.jpg" alt="">
-                        </div>
-                        <div class="testimonial-content">
-                          <div class="testimonial-quote"><i class="la la-quote-left"></i>
-                          </div>
-                          <p>Consectetur Recommended Professional and great experience, Nam pulvinar vitae neque et porttitor, Praesent sed nisi eleifend, adipisicing elit, sed do eiusmodas temporo incididunt Praesent sed nisi eleifend, Consectetur adipisicing elit,</p>
-                          <div class="testimonial-caption">
-                            <h5>Lana Roadse</h5>
-                            <label>CEO of Softino</label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="testimonial style-5">
-                        <div class="testimonial-img">
-                          <img class="img-center" src="/static/images/testimonial/04.jpg" alt="">
-                        </div>
-                        <div class="testimonial-content">
-                          <div class="testimonial-quote"><i class="la la-quote-left"></i>
-                          </div>
-                          <p>Consectetur Recommended Professional and great experience, Nam pulvinar vitae neque et porttitor, Praesent sed nisi eleifend, adipisicing elit, sed do eiusmodas temporo incididunt Praesent sed nisi eleifend, Consectetur adipisicing elit,</p>
-                          <div class="testimonial-caption">
-                            <h5>Lana Roadse</h5>
-                            <label>CEO of Softino</label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
-
-        <!--testimonial end-->
-
+        {% endif %}
     </div>
-
-
     <div class="scroll-top"><a class="smoothscroll" href="#top"><i class="flaticon-go-up-in-web"></i></a></div>
-
 {% endblock %}
