--- a/financing_portal/templates/FinancingPortalProductsPurchased.html
+++ b/financing_portal/templates/FinancingPortalProductsPurchased.html
@@ -40,7 +40,12 @@
                                         <td>${{ prod.amount_left }}</td>
                                         <td>{% if prod.username %}{{ prod.username }}{% endif %}</td>
                                         <td>{% if prod.password %}{{ prod.password }}{% endif %}</td>
-                                        <td>{% if prod.link %}<a class="btn btn-primary" href="{{ prod.link }}">View</a>{% endif %}</td>
+                                        <td>
+                                            {% if prod.link %}
+                                                <a class="btn btn-primary" href="{{ prod.logged_link }}">Dashboard</a>
+                                                <a class="btn btn-primary" href="{{ prod.link }}">Main site</a>
+                                            {% endif %}
+                                        </td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
