--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -74,6 +74,11 @@
                                             class="icon-briefcase"></i>Business Credit Checklist</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
+                                <li>
+                                    <a href="{% url 'business:signupforconcierge' %}"><i
+                                            class="icon-briefcase"></i>Sign Up For Concierge Program</a>
+                                </li>
+                                <li class="dropdown-divider"></li>
 
                                 {% if on_payment_plan %}
                                     <li>
