--- a/financing_portal/templates/FinancingPortalNavigationBase.html
+++ b/financing_portal/templates/FinancingPortalNavigationBase.html
@@ -36,6 +36,11 @@
                 </ul>
 
 
+                <ul class="metisMenu nav flex-column" id="menu">
+                    <li class="nav-item"><a href="{% url 'financing_portal:products-access' %}" class="nav-link">Access Software</a></li>
+                </ul>
+
+
 
 
 
