--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -112,6 +112,12 @@
                         </li>
                         {% endif %}
 
+                        {% if dynamic.show_life_insurance %}
+                        <li class="nav-item">
+                            <a href="{{ dynamic.life_insurance_link }}" class="nav-link" target="_blank"> Life Insurance</a>
+                        </li>
+                        {% endif %}
+
                         <li class="nav-item">
                             <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span
                                     class="toggle-none">Business Credit Building <span
