--- a/financing_portal/templates/FinancingPortalProductsAccessSoftware.html
+++ b/financing_portal/templates/FinancingPortalProductsAccessSoftware.html
@@ -45,7 +45,8 @@
                                     <th>Amount Left</th>
                                     <th>Username</th>
                                     <th>Password</th>
-                                    <th>Link</th>
+                                    <th>Open Here</th>
+                                    <th>Go To Software Page</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -59,8 +60,14 @@
                                         <td>{% if prod.password %}{{ prod.password }}{% endif %}</td>
                                         <td>
                                             {% if prod.link %}
-                                                <a class="btn btn-primary" href="{{ prod.logged_link }}">Dashboard</a>
-                                                <a class="btn btn-primary" href="{{ prod.link }}">Main site</a>
+                                            <button onclick="setFrameUrl('{{ prod.link }}')" class="btn btn-primary">
+                                                Open
+                                            </button>
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            {% if prod.link %}
+                                                <a class="btn btn-primary" href="{{ prod.link }}" target="_blank">Go To Site</a>
                                             {% endif %}
                                         </td>
                                     </tr>
@@ -68,15 +75,11 @@
                                 </tbody>
                             </table>
                         </div>
+                        <iframe id="softwareEmbed" width="100%" height="800"></iframe>
                     </div>
-                    <iframe id="softwareEmbed" width="100%" height="800"></iframe>
                 </div>
             </div>
         </div>
     </section>
 {% endblock %}
 
-
-<script>
-
-</script>
