--- a/whitelabelpartnerportal/templates/ClientProgress.html
+++ b/whitelabelpartnerportal/templates/ClientProgress.html
@@ -21,6 +21,7 @@
                                 <th>Clients Goal</th>
                                 <th>What Is Purchased</th>
                                 <th>What Is Recommended</th>
+                                <th>Client Can See Only Created Portals</th>
                                 <th>Create Portal</th>
                             </tr>
                             </thead>
@@ -30,9 +31,19 @@
                                     <td>{{ client.user.first_name }} {{ client.user.last_name }}</td>
                                     <td>{{ client.what_is_done }}</td>
                                     <td>{{ client.what_is_left }}</td>
-                                    <td>{% for i in client.goals %}<p>{{ i.name }}</p>{% endfor %} <p>{{ client.user_goals_text }}</p></td>
+                                    <td>{% for i in client.goals %}<p>{{ i.name }}</p>{% endfor %}
+                                        <p>{{ client.user_goals_text }}</p></td>
                                     <td>{{ client.what_is_purchased }}</td>
                                     <td>{{ client.what_is_recommended }}</td>
+                                    <td>
+                                        <form method="post">
+                                            {% csrf_token %}
+                                            <label>
+                                                <input hidden name="see_only_created_portal" value="{{ client.user.id }}">
+                                                <input type="checkbox" name="can_see" onChange="this.form.submit()" {% if client.user.profile.can_see_only_created_portals %} checked {% endif %} #}/>
+                                            </label>
+                                        </form>
+                                    </td>
                                     <td>
                                         <form method="post">
                                             {% csrf_token %}
