--- a/business/templates/businessCreditBuilding/professionalEmailAddress.html
+++ b/business/templates/businessCreditBuilding/professionalEmailAddress.html
@@ -1,22 +1,5 @@
-{#{% extends "pages/base-business.html" %}#}
 {% extends request.resolver_match.page_template %}
 {% load static %}
-
-{% block extrastyle %}
-    <script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous"
-            data-cfasync="false">
-    </script>
-    <script>
-        var chatPal = new ChatPal({
-            embedId: 'DfT7BnTm5dGn',
-            remoteBaseUrl: 'https://chatterpal.me/',
-            version: '7.23'
-        });
-    </script>
-{% endblock extrastyle %}
-<!-- ============================================================== -->
-<!--            Content Start             -->
-<!-- ============================================================== -->
 {% block content %}
 
 
@@ -60,7 +43,8 @@
                             </tr>
                         {% endfor %}
                     </table>
-                    </a>
+                    <iframe is="x-frame-bypass" src="https://www.gdtincorporated.com" width="100%"
+                            height="750px" style="border:0"></iframe>
                 </div>
             </div>
         {% else %}
@@ -100,24 +84,6 @@
         {% endif %}
     </section>
 
-    <style>
-        .lastImage {
-            margin-bottom: 22px;
-        }
-    </style>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
 
 
 {% endblock %}
