--- a/business/templates/businessCreditBuilding/websiteCreationPaid.html
+++ b/business/templates/businessCreditBuilding/websiteCreationPaid.html
@@ -1,20 +1,6 @@
-{#{% extends "pages/base-business.html" %}#}
 {% extends request.resolver_match.page_template %}
 {% load static %}
 
-{% block extrastyle %}
-    <script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?7.23" crossorigin="anonymous"
-            data-cfasync="false">
-    </script>
-
-    <script>
-        var chatPal = new ChatPal({
-            embedId: 'DfT7BnTm5dGn',
-            remoteBaseUrl: 'https://chatterpal.me/',
-            version: '7.23'
-        });
-    </script>
-{% endblock extrastyle %}
 <!-- ============================================================== -->
 <!--            Content Start             -->
 <!-- ============================================================== -->
@@ -69,7 +55,7 @@
             <div class="row">
                 <div class="col d-flex flex-column justify-content-center">
                     <br><br>
-                    <iframe is="x-frame-bypass" src="http://getdinerotoday.responsivesiteeditor.com/login" width="100%"
+                    <iframe is="x-frame-bypass" src="https://www.gdtwebsitebuilder.com/login" width="100%"
                             height="750px" style="border:0"></iframe>
                 </div>
             </div>
@@ -78,18 +64,5 @@
 
     </section>
 
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
 
 {% endblock %}
