--- a/business/templates/businessCreditBuilding/faxNumberPaid.html
+++ b/business/templates/businessCreditBuilding/faxNumberPaid.html
@@ -23,7 +23,7 @@
                     <br>
 
                     <br>
-                    <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>
+{#                    <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14</h3>#}
                     <table class="table">
                         <thead class="thead-light">
                         <tr>
@@ -44,7 +44,7 @@
                                 <td>{{ service.password }}</td>
 
                                 <td><a class="btn btn-primary" target="_blank"
-                                       href="https://portal.bak.atlas.wlcomm.net/login">Go
+                                       href="https://www.gdtvoice.com">Go
                                     To Dashboard</a></td>
                             </tr>
                         {% endfor %}
