--- a/business/templates/businessCreditBuilding/tollFreeNumberPaid.html
+++ b/business/templates/businessCreditBuilding/tollFreeNumberPaid.html
@@ -21,7 +21,7 @@
                 <div class="col-md-12">
                     <br>
 
-                    <br><h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>
+{#                    <br><h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>#}
                     <table class="table">
                         <thead class="thead-light">
                         <tr>
@@ -40,7 +40,7 @@
                                 <td>{{ service.product }}</td>
                                 <td>{{ service.username }}</td>
                                 <td>{{ service.password }}</td>
-                            <td><a class="btn btn-primary" target="_blank" href="https://portal.bak.atlas.wlcomm.net/login ">Go
+                            <td><a class="btn btn-primary" target="_blank" href="https://www.gdtvoice.com">Go
                                     To Dashboard</a></td>
                             </tr>
                         {% endfor %}
