--- a/business/templates/businessCreditBuilding/professionalEmailAddress.html
+++ b/business/templates/businessCreditBuilding/professionalEmailAddress.html
@@ -37,14 +37,14 @@
                                 <td>{{ service.name }}</td>
                                 <td>{{ service.status }}</td>
                                 <td>{{ service.product }}</td>
-                                <td>{% if service.provider %}
-                                    <a href="{{ service.provider }}" class="btn btn-primary">Go To
-                                        Dashboard</a>{% endif %}</td>
+                                <td>
+                                    <a href="https://www.gdtincorporated.com" class="btn btn-primary">Go To
+                                        Dashboard</a></td>
                             </tr>
                         {% endfor %}
                     </table>
-                    <iframe is="x-frame-bypass" src="https://www.gdtincorporated.com" width="100%"
-                            height="750px" style="border:0"></iframe>
+                    {#                    <iframe is="x-frame-bypass" src="https://www.gdtincorporated.com" width="100%"#}
+                    {#                            height="750px" style="border:0"></iframe>#}
                 </div>
             </div>
         {% else %}
