--- a/business/templates/businessCreditBuilding/websiteCreationPaid.html
+++ b/business/templates/businessCreditBuilding/websiteCreationPaid.html
@@ -25,7 +25,7 @@
                     <br>
 
                     <br>
-                    <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>
+{#                    <h3>Use Your Email You Have Used To Login To This Account & The Password: Northface14 </h3>#}
                     <table class="table">
                         <thead class="thead-light">
                         <tr>
@@ -55,8 +55,8 @@
             <div class="row">
                 <div class="col d-flex flex-column justify-content-center">
                     <br><br>
-                    <iframe is="x-frame-bypass" src="https://www.gdtwebsitebuilder.com/login" width="100%"
-                            height="750px" style="border:0"></iframe>
+{#                    <iframe src="https://www.gdtwebsitebuilder.com" width="100%"#}
+{#                            height="750px" style="border:0"></iframe>#}
                 </div>
             </div>
 
